--- a/.github/workflows/tests-go-centos5-.yml
+++ b/.github/workflows/tests-go-centos5-.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run Go tests in Centos 5
         run: |
           docker-compose --file docker-compose.test.yml build
-          docker-compose --file docker-compose.test.yml run go-centos
+          docker-compose --file docker-compose.test.yml run unit
 
 
 
